force-app/main/default/objects/Portfolio_Advisor_Assign__c/Portfolio_Advisor_Assign__c.object-meta.xml
<CustomObject>
    <description>Represents the assignment of a portfolio to an advisor</description>
    <label>Portfolio-Advisor Assign</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Portfolio-Advisor Assign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio-Advisor Assigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>