force-app/main/default/objects/Portfolio_Advisor_Assign__c/fields/Advisor__c.field-meta.xml
<CustomField>
    <fullName>Advisor__c</fullName>
    <description>The advisor linked from this join record</description>
    <inlineHelpText>The advisor linked from this join record</inlineHelpText>
    <label>Advisor</label>
    <referenceTo>Advisor__c</referenceTo>
    <relationshipLabel>Portfolio-Advisor Assigns</relationshipLabel>
    <relationshipName>Portfolio_Advisor_Assigns</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>