force-app/main/default/objects/Portfolio_Advisor_Assign__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments on this portfolio assignment</description>
    <inlineHelpText>Comments on this portfolio assignment</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>